--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -23,6 +23,12 @@ $text_c: #000000;
 $link_c: #007aff;
 
 /* 
+  responsive
+*/
+$grid_tablet: 991px;
+$grid_mobile: 767px;
+
+/* 
   etc 
 */
-$border_default: 5px; 
+$border_radius_default: 5px; 
